opam-version: "2.0"
name: "satysfi-class-jsdocs-doc"
version: "0.2"
synopsis: "A simple class file for Japanese-style documents"
description: """A simple class file for Japanese-style documents"""

maintainer: "Yasuo Ozu <yasuo@ozu.email>"
authors: "Yasuo Ozu <yasuo@ozu.email>"
license: "MIT"
homepage: "https://github.com/yasuo-ozu/satysfi-jsdocs"
bug-reports: "https://github.com/yasuo-ozu/satysfi-jsdocs/issues"
dev-repo: "git+https://github.com/yasuo-ozu/satysfi-jsdocs.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "class-jsdocs-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-jsdocs-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]


